# mpc-mcp-server

./: .gitignore  README.md  pyproject.toml
mpc_core/: __init__.py  compiler.py  entity_ledger.py  json_repair.py  models.py  providers.py  router.py  thermodynamics.py
mpc_server/: server.py
static/: index.html
